<resources>
    <string name="app_name">Guia5</string>
    <string name="btnConversations">Conversations</string>
    <string name="btnLogin">Login</string>
    <string name="btnCalcu">Calculator</string>
    <string name="btnDatos">Datos</string>
    <string name="title_activity_conversations">Conversations</string>
    <string name="hora62">6:30 AM</string>
    <string name="hora69">6:09 AM</string>
    <string name="hora516">5:16 AM</string>
    <string name="hora151">1:51 AM</string>
    <string name="yester">Yesterday</string>
    <string name="label1">David García, Rich...</string>
    <string name="label2">Jennifer Gonzalez</string>
    <string name="label3">maria-smith@mail...</string>
    <string name="label4">The Family</string>
    <string name="label5">+1 123-456-7890</string>
    <string name="label6">Robert Jones</string>
    <string name="label7">David García</string>
    <string name="text1">See you guys soon!</string>
    <string name="text2">I am really excited for that new video game!</string>
    <string name="text3">When will you be there?</string>
    <string name="text4">When\'s our next vacation?</string>
    <string name="text5">Can\'t wait to see you when you  get back from college!</string>
    <string name="text6">I am coming in one minute</string>
    <string name="text7">I am coming in one minute</string>
    <string name="user">Usuario</string>
    <string name="pass">Pass</string>
    <string name="login">Login</string>
    <string name="textLogin">Forgot password? Sign in.</string>
    <string name="nombre">Yency Marbel Centeno Campos</string>
    <string name="codigo">CC16-I04-001</string>
    <string name="correlativo">Correlativo: 26</string>
    <string name="tituloDatos">Mis datos</string>
    <string name="textCalcu">123 + 456 = 579</string>

    <string name="cero">0</string>
    <string name="ceroCero">00</string>
    <string name="uno">1</string>
    <string name="dos">2</string>
    <string name="tres">3</string>
    <string name="cuatro">4</string>
    <string name="cinco">5</string>
    <string name="seis">6</string>
    <string name="siete">7</string>
    <string name="ocho">8</string>
    <string name="nueve">9</string>
    <string name="parentesis">(</string>
    <string name="parentesis1">)</string>
    <string name="porcentaje">%</string>
    <string name="punto">.</string>
    <string name="mas">+</string>
    <string name="menos">-</string>
    <string name="por">x</string>
    <string name="dividir">÷</string>
    <string name="igual">=</string>
    <string name="pi">π\n3.1415926535897932384626433832795</string>
    <string name="pisimbolo">π</string>
    <string name="del">DEL</string>
    <string name="inv">INV</string>
    <string name="sin">sin</string>
    <string name="ln">ln</string>
    <string name="deg">DEG</string>
    <string name="log">log</string>
    <string name="cos">cos</string>
    <string name="e">e</string>
    <string name="tan">tan</string>
    <string name="admiracion">!</string>
    <string name="elevado">^</string>
</resources>
