<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:gravity="center"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:onClick="OnClickConversation"
        android:layout_margin="30dp"
        android:background="#D7EE15D8"
        android:textStyle="bold"
        android:textSize="18dp"
        android:textColor="@color/white"
        android:text="@string/btnConversations"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </Button>

    <Button
        android:onClick="OnClickLogin"
        android:layout_margin="30dp"
        android:background="#D7EE15D8"
        android:textStyle="bold"
        android:textSize="18dp"
        android:textColor="@color/white"
        android:text="@string/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </Button>

    <Button
        android:onClick="OnClickCalculator"
        android:layout_margin="30dp"
        android:background="#D7EE15D8"
        android:textStyle="bold"
        android:textSize="18dp"
        android:textColor="@color/white"
        android:text="@string/btnCalcu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </Button>


    <Button
        android:onClick="OnClickDatos"
        android:layout_margin="30dp"
        android:background="#D7EE15D8"
        android:textStyle="bold"
        android:textSize="18dp"
        android:textColor="@color/white"
        android:text="@string/btnDatos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </Button>

</LinearLayout>